# security-center

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  com.chrisdaggas.security-center.yml  deny.toml  review.md
.github/workflows/: ci.yml  release.yml
data/: com.chrisdaggas.security-center.desktop  com.chrisdaggas.security-center.gresource.xml  com.chrisdaggas.security-center.metainfo.xml  org.gnome.SecurityCenterCosmic.metainfo.xml  style.css
data/icons/hicolor/: index.theme
data/resources/: style.css
packaging/: build-packages.sh
packaging/appimage/: AppRun  com.chrisdaggas.security-center.desktop
packaging/arch/: PKGBUILD
packaging/deb/: changelog  control  copyright  install  rules
packaging/deb/maintainer-scripts/: postrm
packaging/rpm/: security-center.spec
po/: LINGUAS  POTFILES.in  ar.po  de.po  el.po  es.po  fr.po  hi.po  it.po  pt.po  ru.po  security-center.pot  zh.po
scripts/: clean.sh  doctor.sh  fetch-geoip.sh  lint.sh  package-appimage.sh  package-deb.sh  package-rpm.sh  release-build.sh
src/: application.rs  autostart.rs  config.rs  i18n.rs  main.rs  storage.rs  validation.rs  version_check.rs
src/admin/: actions.rs  geoip.rs  ipinfo.rs  mod.rs  network.rs  sock_diag.rs
src/firewall/: client.rs  mod.rs
src/models/: consolidated_port.rs  interface.rs  mod.rs  port.rs  service.rs  zone.rs
src/stats/: cache.rs  collectors.rs  mod.rs  models.rs
src/systemd/: client.rs  mod.rs
src/ui/: app_icons.rs  connections_page.rs  help_page.rs  ip_details.rs  main_window.rs  mod.rs  network_exposure_page.rs  overview_page.rs  ports_page.rs  quick_actions_page.rs  services_page.rs  system_services_page.rs  zones_page.rs
src/ui/widgets/: bar_chart.rs  donut_chart.rs  line_chart.rs  meter_bar.rs  mod.rs  network_activity_chart.rs  sparkline.rs
