[package]
name = "security-center"
version = "1.0.0"
edition = "2021"
authors = ["Christos Daggas <chrisdaggas@example.com>"]
license = "MIT"
license-file = "LICENSE"
description = "A modern GTK4 security center for Linux"
repository = "https://github.com/christosdaggas/security-center"
keywords = ["security", "gtk4", "gnome", "linux", "firewall", "systemd"]
categories = ["gui", "network-programming"]

[dependencies]
# GTK4 and Libadwaita
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_5"] }

# Async runtime and D-Bus
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
toml = "0.9.10"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true

# Debian package configuration
[package.metadata.deb]
maintainer = "Christos Daggas <chrisdaggas@example.com>"
copyright = "2026, Christos Daggas"
license-file = ["LICENSE", "0"]
extended-description = """\
Security Center is a modern GTK4/Libadwaita application for managing \
system security on Linux. It provides a user-friendly interface for \
controlling firewalld, monitoring network exposure, and managing \
system services."""
depends = "$auto, firewalld, polkit"
section = "admin"
priority = "optional"
assets = [
    ["target/release/security-center", "usr/bin/", "755"],
    ["data/com.chrisdaggas.security-center.desktop", "usr/share/applications/", "644"],
    ["data/com.chrisdaggas.security-center.metainfo.xml", "usr/share/metainfo/", "644"],
    ["data/icons/hicolor/scalable/apps/com.chrisdaggas.security-center.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["README.md", "usr/share/doc/security-center/", "644"],
]

# RPM package configuration (for cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/security-center", dest = "/usr/bin/security-center", mode = "755" },
    { source = "data/com.chrisdaggas.security-center.desktop", dest = "/usr/share/applications/com.chrisdaggas.security-center.desktop", mode = "644" },
    { source = "data/com.chrisdaggas.security-center.metainfo.xml", dest = "/usr/share/metainfo/com.chrisdaggas.security-center.metainfo.xml", mode = "644" },
    { source = "data/icons/hicolor/scalable/apps/com.chrisdaggas.security-center.svg", dest = "/usr/share/icons/hicolor/scalable/apps/com.chrisdaggas.security-center.svg", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/security-center/README.md", mode = "644" },
]

[package.metadata.generate-rpm.requires]
firewalld = "*"
gtk4 = ">= 4.14"
libadwaita = ">= 1.5"
polkit = "*"
